syntax = "proto3";

option java_multiple_files = true;
package org.exampledriven.grpc.services;


message AddressResponse {
    string city = 1;
    string state = 2;
}

message EmployeeRequest{
    string id = 1;
}

service AddressService {
        rpc findAddress(EmployeeRequest) returns (AddressResponse);
}